--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Autoclose issues that do not follow the issue template
-      uses: roots/issue-closer@v1.1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-close-message: "@${issue.user.login} this issue was automatically closed because it did not follow the issue template."
+      run: |
+        echo "Hello World"
