--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,17 @@
-name: Autocloser
-on:
-  issues:
-    types: [edited]
+name: Greeting from Mona
+
+on: push
+
 jobs:
-  autoclose:
+  my-job:
+    name: My Job
     runs-on: ubuntu-latest
     steps:
-    - name: Autoclose issues that do not follow the issue template
+    - name: Print a greeting
+      env:
+        MY_VAR: Hi there! My name is
+        FIRST_NAME: Mona
+        MIDDLE_NAME: The
+        LAST_NAME: Octocat
       run: |
-        echo "Hello World"
+        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
