--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Print a greeting
       env:
         MY_VAR: Hi there! My name is
-        FIRST_NAME: Mona
+        FIRST_NAME: Test
         MIDDLE_NAME: The
         LAST_NAME: Octocat
       run: |
