--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,12 @@
 name: Autocloser
-
-on:
-  issues:
-    types: [edited]
-
+on: [issues, pull_request]
 jobs:
   autoclose:
     runs-on: ubuntu-latest
     steps:
-    - name: Autoclose issues that do not follow the issue template
+    - name: Autoclose issues that did not follow issue template
       uses: roots/issue-closer@v1.1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-close-message: "@${issue.user.login} this issue was automatically closed because it did not follow the issue template."
+        issue-close-message: "@${issue.user.login} this issue was automatically closed because it did not follow the issue template"
         issue-pattern: ".*guidelines for Contributing.*"
