--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: Autocloser
-on: [issues, pull_request]
+on:
+  issues:
+      types: [opened, edited]
 jobs:
   autoclose:
     runs-on: ubuntu-latest
