--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           closed-issues-label: "🙁 Not following issue template"
+      - name: Add label with the React Native version
+        uses: ./
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
