--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "main": "dist/index.js",
   "repository": "https://github.com/react-native-community/upgrade-support",
   "scripts": {
-    "build:actions": "ncc build actions/addLabelRNVersion.js",
+    "build:actions": "ncc build actions/addLabelRNVersion.js --out actions/dist",
     "sync-release": "./sync-release.sh"
   }
 }
