--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "md-2-json": "^1.0.6"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.21.0"
+    "@zeit/ncc": "^0.21.0",
+    "husky": "^4.0.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn build:actions"
+    }
   },
   "license": "MIT",
   "main": "dist/index.js",
