Add built files to commit when running `pre-commit` hook

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn build:actions"
+      "pre-commit": "yarn build:actions; git add actions/dist/*.js"
     }
   },
   "license": "MIT",
