--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn build:actions"
+      "pre-commit": "yarn build:actions; git add actions/dist/*"
     }
   },
   "license": "MIT",
