Run `syncReleases` GitHub action every 15 minutes

--- a/.github/workflows/sync-releases.yml
+++ b/.github/workflows/sync-releases.yml
@@ -1,8 +1,8 @@
 name: Synchronise release versions
 
 on:
-  issues:
-    types: [edited] # for testing
+  schedule:
+    - cron: "15 * * * *"
 
 jobs:
   sync_releases:
