--- a/.github/workflows/sync-releases.yml
+++ b/.github/workflows/sync-releases.yml
@@ -2,7 +2,7 @@ name: Synchronise release versions
 
 on:
   schedule:
-    - cron: "15 * * * *"
+    - cron: "*/15 * * * *"
 
 jobs:
   sync_releases:
